--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <h1 class="title">
             <p>
                 <audio autoplay="autoplay" loop controls>
-                    <source src="C:\Users\82102\OneDrive\바탕 화면\자기소개 페이지\Owl City - 02 - Shooting Star-201201.mp3" type="audio/mp3">
+                    <source src="Owl City - 02 - Shooting Star-201201.mp3" type="audio/mp3">
                 </audio>
                 
                </p>
-           <div><img id="picture" src="C:\Users\82102\OneDrive\바탕 화면\자기소개 페이지\준환 이모지.jpg">
+           <div><img id="picture" src="이력서.png">
             </div>
             <b id="J">J</b> 
             <b id="U">U</b> 
