--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </audio>
                 
                </p>
-           <div><img id="picture" src="이력서.png">
+           <div><img id="picture" src="준환 이모지.jpg">
             </div>
             <b id="J">J</b> 
             <b id="U">U</b> 
